# asx-sprites

./: CMakeLists.txt  vcpkg.json
app/: CMakeLists.txt  main.cpp
cmake/: project_gen_export.cmake
